--- a/config.org
+++ b/config.org
@@ -1,25 +1,21 @@
-#+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
-#+OPTIONS: author:t broken-links:nil c:nil creator:nil
-#+OPTIONS: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
-#+OPTIONS: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+OPTIONS: timestamp:t title:t toc:t todo:t |:t
 #+TITLE: EmaccS
 #+DATE: <2018-11-20 Tue>
-#+AUTHOR: Matehus Artur
-#+EMAIL: macc@cock.li
+#+AUTHOR: Matheus Artur
+#+EMAIL: macc@ic.ufal.br
 #+LANGUAGE: en
 #+SELECT_TAGS: export
 #+EXCLUDE_TAGS: noexport
+#+OPTIONS: noexport
 #+CREATOR: Emacs 26.1 (Org mode 9.1.9)
 
-[[./img/dashLogo.png]]
+#+ATTR_HTML: :style margin-left: auto; margin-right: auto;
+[[img/dashLogo.png]]
 
 * General recomendations and references
   This Emacs configuration should work fine on any GNU/Linux distribution, just get the external package dependencies. I cannot guarantee full functionality on others systems without some particular tweaks, but about 70% should work out of the box.
   For the sources I used to build this configuration file, I had two main ones. First 'daedreth' [[https://www.youtube.com/channel/UCDEtZ7AKmwS0_GNJog01D2g][YouTube channel]], really good for learning Elisp and the [[https://www.emacswiki.org/][Emacs wiki]] that contains pretty much everything about Emacs and it's packages.
 * Basic configs
   Some built-in emacs configurable variables, most interface and editing style related.
-
 ** Toolbar, menu and Scrollbar
 #+BEGIN_SRC emacs-lisp
   (tool-bar-mode -1)
@@ -96,13 +92,6 @@
 #+END_SRC
 
 ** Functions 
-*** Edit Personal Schedule
-#+BEGIN_SRC emacs-lisp
-  (defun acess-routine()
-    (interactive)
-    (find-file "~/Documents/schedule.org"))
-  (global-set-key (kbd "C-c s") 'acess-routine)
-#+END_SRC
 *** Edit config file function  
 #+BEGIN_SRC emacs-lisp
   (defun config-visit()
@@ -144,6 +133,7 @@
   :config
     (erc-update-modules))
 #+END_SRC
+
 * Terminal emulator
   Some tweaks to use the Emacs ansi-term.
 
@@ -221,7 +211,7 @@
      (setq dashboard-startup-banner "~/.emacs.d/img/dashLogo.png")
      (setq dashboard-items '((recents  . 5)
                              (projects . 5)))
-     (setq dashboard-banner-logo-title "Workflow ideal"))
+     (setq dashboard-banner-logo-title "闘志!!!"))
  #+END_SRC
 
 ** Dmenu
@@ -320,11 +310,6 @@
     ("C-c q" . 'mark-next-like-this))
 #+END_SRC
 
-** Autism
-#+BEGIN_SRC emacs-lisp
-      (use-package elcord
-	:ensure t)
-#+END_SRC
 * IDO mode, buffer and file navigation 
   "C-x b" for default is really bad for navigating in buffers, specially if you are working with a dozen of them. IDO-mode + the ido-vertical-mode package lists all buffers and accept tab completion.
 
@@ -368,7 +353,7 @@
   (global-set-key (kbd "C-x k") 'murder-buffer)
 #+END_SRC
 
-* EXWM (Emacs X window manager)
+* EXWM
   This transforms Emacs into a powerful tiling window manager. Delete this section for usage in desktop enviroments, other wm's or tty-only
 
 ** Dependencies
@@ -380,80 +365,88 @@
 
 ** Package
 #+BEGIN_SRC emacs-lisp
-    (use-package exwm
-      :ensure t
-      :config
-	(require 'exwm-config)
-	(fringe-mode 1)
-	(server-start)
-	(exwm-config-ido)
+  (use-package exwm
+    :ensure t
+    :config
+    (require 'exwm-config)
+    (fringe-mode 1)
+    (server-start)
+    (exwm-config-ido)
 
-	; Setup the workpasces Mod + 1-9
-	(setq exwm-workspace-number 3)
-	(exwm-input-set-key (kbd "s-r") #'exwm-restart)
-	(exwm-input-set-key (kbd "s-k") #'exwm-workspace-delete)
-	(exwm-input-set-key (kbd "s-w") #'exwm-workspace-swap)
-	(dotimes (i 10)
-	  (exwm-input-set-key (kbd (format "s-%d" i))
-			      `(lambda ()
-				 (interactive)
-				 (exwm-workspace-switch-create ,i))))
+					  ; Setup the workpasces Mod + 1-9
+    (setq exwm-workspace-number 4)
+    (exwm-input-set-key (kbd "s-r") #'exwm-restart)
+    (exwm-input-set-key (kbd "s-k") #'exwm-workspace-delete)
+    (exwm-input-set-key (kbd "s-w") #'exwm-workspace-swap)
+    (dotimes (i 4)
+      (exwm-input-set-key (kbd (format "s-%d" i))
+			  `(lambda ()
+			     (interactive)
+			     (exwm-workspace-switch-create ,i))))
 
-	(push ?\C-q exwm-input-prefix-keys)
-	(define-key exwm-mode-map [?\C-q] #'exwm-input-send-next-key)
+    (push ?\C-q exwm-input-prefix-keys)
+    (define-key exwm-mode-map [?\C-q] #'exwm-input-send-next-key)
 
 
-	(require 'exwm-randr)
-	(setq exwm-randr-workspace-output-plist '(0 "HDMI-1"))
-	(add-hook 'exwm-randr-screen-change-hook
-		  (lambda ()
-		    (start-process-shell-command
-		     "xrandr" nil "xrandr --output HDMI-1 --left-of LVDS-1 --auto")))
-	(exwm-enable)
-	(exwm-randr-enable)
+    (require 'exwm-randr)
+    (setq exwm-randr-workspace-output-plist '(0 "HDMI-1"))
+    (add-hook 'exwm-randr-screen-change-hook
+	      (lambda ()
+		(start-process-shell-command
+		 "xrandr" nil "xrandr --output HDMI-1 --left-of LVDS-1 --auto")))
+    (exwm-enable)
+    (exwm-randr-enable)
 
-;	(exwm-enable-ido-workaround)
+					  ;	(exwm-enable-ido-workaround)
 
-	; Keybinds
-	(exwm-input-set-simulation-keys
-	 '(
-	   ;; movement
-	   ([?\C-b] . left)
-	   ([?\M-b] . C-left)
-	   ([?\C-f] . right)
-	   ([?\M-f] . C-right)
-	   ([?\C-p] . up)
-	   ([?\C-n] . down)
-	   ([?\C-a] . home)
-	   ([?\C-e] . end)
-	   ([?\M-v] . prior)
-	   ([?\C-v] . next)
-	   ([?\C-d] . delete)
-	   ([?\C-k] . (S-end delete))
-	   ;; cut/paste
-	   ([?\C-w] . ?\C-x)
-	   ([?\M-w] . ?\C-c)
-	   ([?\C-y] . ?\C-v)
-	   ;; search
-	   ([?\C-s] . ?\C-f)))
+					  ; Keybinds
+    (exwm-input-set-simulation-keys
+     '(
+       ;; movement
+       ([?\C-b] . left)
+       ([?\M-b] . C-left)
+       ([?\C-f] . right)
+       ([?\M-f] . C-right)
+       ([?\C-p] . up)
+       ([?\C-n] . down)
+       ([?\C-a] . home)
+       ([?\C-e] . end)
+       ([?\M-v] . prior)
+       ([?\C-v] . next)
+       ([?\C-d] . delete) 
+       ([?\C-k] . (S-end delete))
+       ;; cut/paste
+       ([?\C-w] . ?\C-x)
+       ([?\M-w] . ?\C-c)
+       ([?\C-y] . ?\C-v)
+       ; audio keys
+       ([<XF86AudioMicMute>] . XF86AudioMicMute)
+       ([<XF86AudioMute>] . XF86AudioMute)
+       ([<XF86AudioLowerVolume>] . XF86AudioLowerVolume)
+       ([<XF86AudioRaiseVolume>] . XF86AudioRaiseVolume)
+       ;; search
+       ([?\C-s] . ?\C-f)))
 
-	; Enables special keyboard keys.
-	(dolist (k '(XF86AudioLowerVolume
-		   XF86AudioRaiseVolume
-		   XF86PowerOff
-		   XF86AudioMute
-		   XF86AudioPlay
-		   XF86AudioStop
-		   XF86AudioPrev
-		   XF86AudioNext
-		   XF86ScreenSaver
-		   XF86Launch1
-		   XF68Back
-		   XF86Forward
-		   Scroll_Lock
-		   print))
-	(cl-pushnew k exwm-input-prefix-keys))
-	(exwm-enable))
+       ; Enables special keyboard keys.
+    (dolist (k '(XF86AudioLowerVolume
+		 XF86AudioRaiseVolume
+		 XF86PowerOff
+		 XF86AudioMute
+		 XF86AudioPlay
+		 XF86AudioStop
+		 XF86AudioPrev
+		 XF86AudioNext
+		 XF86ScreenSaver
+		 XF86Launch1
+		 XF68Back
+		 XF86Forward
+		 Scroll_Lock
+		 print))
+      (cl-pushnew k exwm-input-prefix-keys))
+    (exwm-enable))
+
+  (require 'exwm-systemtray)
+  (exwm-systemtray-enable)
 #+END_SRC
 
 ** Lauching programs
@@ -471,16 +464,17 @@
     (interactive)
     (exwm-async-run "slock"))
 
-  (defun launch-discord ()
+  (defun launch-wifi ()
     (interactive)
-    (exwm-async-run "discord"))
+    (exwm-async-run "wpa_gui"))
 
-  (global-set-key (kbd "s-d") 'launch-discord)
+  (global-set-key (kbd "s-n") 'launch-wifi)
   (global-set-key (kbd "s-i") 'launch-browser)
   (global-set-key (kbd "s-x") 'launch-lock)
 #+END_SRC
 
 ** Screenshots with imagemagick
+
 #+BEGIN_SRC emacs-lisp
   (defun screenshot ()
      "Takes a fullscreen screenshot of the current workspace"
@@ -504,7 +498,36 @@
    (global-set-key (kbd "<Scroll_Lock>") 'screenshot-window)
 #+END_SRC
 
-* Modeline (aka. the bar)
+** Audio controls
+   This should work for =pulseaudio-alsa= and =alsa= standalone users
+#+BEGIN_SRC emacs-lisp
+(defconst volumeModifier "3")
+
+  (defun mic/mute ()
+    (interactive)
+    (start-process "mic-mute" nil "amixer" "sset" "Capture" "toggle" "all"))
+
+  (defun audio/mute ()
+    (interactive)
+    (start-process "audio-mute" nil "amixer" "sset" "Master" "toggle" "all"))
+
+  (defun audio/raise-volume ()
+    (interactive)
+    (start-process "raise-volume" nil "amixer" "-q" "sset" "Master" (concat volumeModifier "%+" )))
+
+  (defun audio/lower-volume ()
+    (interactive)
+    (start-process "lower-volume" nil "amixer" "-q" "sset" "Master" (concat volumeModifier "%-" )))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(global-set-key (kbd "<XF86AudioMicMute>") 'mic/mute)
+(global-set-key (kbd "<XF86AudioMute>") 'audio/mute)
+(global-set-key (kbd "<XF86AudioRaiseVolume>") 'audio/raise-volume)
+(global-set-key (kbd "<XF86AudioLowerVolume>") 'audio/lower-volume)
+#+END_SRC
+
+* Modeline (status bar)
   Making the modeline great for information display.
 
 ** Modeline(spaceline)
@@ -579,19 +602,44 @@
 ** Macro programing languages SRC cases
    Because typing the languague everytime is very repetitive.
 
-# For Emacs-Lisp
+*** For Emacs-Lisp
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'org-structure-template-alist
                '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
 #+END_SRC
 
-# For C
+*** For C
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'org-structure-template-alist
                '("cc" "#+BEGIN_SRC c\n?\n#+END_SRC"))
 #+END_SRC
-  
-* Programming packages
+
+*** For C++
+#+BEGIN_SRC emacs-lisp
+  (add-to-list 'org-structure-template-alist
+               '("cpp" "#+BEGIN_SRC c++\n?\n#+END_SRC"))
+#+END_SRC
+
+* Org Agenda 
+
+   My default org files is located on /~/sync/schedules/ and I mainly use =syncthing= to sync the files
+   between computers and mobile. Just change to whatever folder you want to synchronize, it should work perfectly fine with Dropbox too.
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-files (append
+			  (file-expand-wildcards "~/sync/schedules/*.org")))
+
+  (when window-system (global-set-key (kbd "s-a") 'org-agenda))
+ #+END_SRC
+
+** Open schedules directory
+#+BEGIN_SRC emacs-lisp
+  (defun acess-routine()
+    (interactive)
+    (dired "~/sync/schedules"))
+  (global-set-key (kbd "C-c s") 'acess-routine)
+#+END_SRC
+
+* Programming
   Snippets & autocompletion packages first, then configuration by language.
 
 ** Dependencies
@@ -705,6 +753,7 @@
   (use-package cheat-sh
     :ensure t)
 #+END_SRC
+
 * Media 
 ** EMMS
    Why use a external media player for listening music when you can do it within Emacs with EMMS?
@@ -767,3 +816,28 @@
     (message "MPD Database Updated!"))
   (global-set-key (kbd "s-m u") 'mpd/update-database)
 #+END_SRC
+
+* Startup applications
+  This is a little scheme to replace .xinitrc startup application calls. With these calls in the emacs configuration
+  there's no need of editing .xinitrc for every machine.
+
+** Keyboard options
+   Remap ctrl to caps and increases press rate
+#+BEGIN_SRC emacs-lisp
+(shell-command "xset r rate 200 50")
+(shell-command "setxkbmap us -option ctrl:nocaps")
+#+END_SRC
+
+** Compton
+   By default EXWM tends to flicker a little bit, compton fixes that
+#+BEGIN_SRC emacs-lisp
+(shell-command "compton -b")
+#+END_SRC
+
+** bittorrent client
+   It will stack procs if you don't kill all. I know it sucksa bit, might change my 
+#+BEGIN_SRC emacs-lisp
+(shell-command "killall transmission-daemon")
+(shell-command "transmission-daemon")
+#+END_SRC
+
