--- a/config.org
+++ b/config.org
@@ -3,22 +3,13 @@
 #+AUTHOR: Matheus Artur
 #+EMAIL: macc@ic.ufal.br
 #+LANGUAGE: en
-#+SELECT_TAGS: export
-#+EXCLUDE_TAGS: noexport
-#+OPTIONS: noexport
 #+CREATOR: Emacs 26.1 (Org mode 9.1.9)
-#+LATEX_CLASS: article
 #+DESCRIPTION:
-#+KEYWORDS:
-#+SUBTITLE:
-#+LATEX_COMPILER: pdflatex
-#+DATE: \today
 #+ATTR_HTML: :style margin-left: auto; margin-right: auto;
 [[img/dashLogo.png]]
 * Hydra
   Testing stuff
 #+BEGIN_SRC emacs-lisp
-
   (use-package hydra
     :ensure t
     :defer 2
@@ -519,7 +510,7 @@
      (when window-system
      (message "Cheese!")
      (start-process "screenshot" nil "import" "-window" "root" 
-                (concat (getenv "HOME") "/" (subseq (number-to-string (float-time)) 0 10) ".png"))
+                (concat (getenv "HOME") "/Pictures/Screenshots/" (subseq (number-to-string (float-time)) 0 10) ".png"))
      (message "Screenshot taken!")))
    (global-set-key (kbd "<print>") 'screenshot)
 
@@ -529,7 +520,7 @@
      (when window-system
      (call-process "import" nil nil nil ".newScreen.png")
      (call-process "convert" nil nil nil ".newScreen.png" "-shave" "1x1"
-                   (concat (getenv "HOME") "/" (subseq (number-to-string (float-time)) 0 10) ".png"))
+                   (concat (getenv "HOME") "/Pictures/Screenshots/" (subseq (number-to-string (float-time)) 0 10) ".png"))
      (call-process "rm" nil nil nil ".newScreen.png"))
      (message "Screenshot taken!"))
    (global-set-key (kbd "<Scroll_Lock>") 'screenshot-window)
@@ -792,6 +783,7 @@
 #+END_SRC
 
 ** Java
+
 #+BEGIN_SRC emacs-lisp
   (use-package jdee
     :ensure t
@@ -809,6 +801,7 @@
       ("q" exit)
       ("z" nil "leave"))
 #+END_SRC
+
 * Media 
 ** EMMS
    Why use a external media player for listening music when you can do it within Emacs with EMMS?
@@ -892,8 +885,6 @@
 * Openwith
   Use this to lauch external programs
 #+BEGIN_SRC emacs-lisp
-
-
     (use-package openwith
       :ensure t
       :init
